force-app/main/default/objects/Sales_Representative__c/Sales_Representative__c.object-meta.xml
<CustomObject>
    <label>Sales Representative</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Sales Representative Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Representatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>