force-app/main/default/objects/Sales_Representative__c/fields/AMOUNT_INVOICED_PER_PAID_ON__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_INVOICED_PER_PAID_ON__c</fullName>
    <formula>if(Invoiced_dollar__c!=0,Paid_dollar__c / Invoiced_dollar__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% PAID ON AMOUNT INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>