force-app/main/default/objects/Sales_Representative__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <formula>IF((TEXT( Opportunity__r.Project__r.Project_Stage__c ) == &apos;Archived&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archived</label>
    <type>Text</type>
</CustomField>