force-app/main/default/objects/Sales_Representative__c/fields/BuyResellMarginBooked__c.field-meta.xml
<CustomField>
    <fullName>BuyResellMarginBooked__c</fullName>
    <description>The above formula is calculated from project Financials tab --&gt; Margin
And we&apos;re using this formula field in Sales Result dashboard for--&gt; Buy Resell Margin Booked
&amp; Buy Resell Margin Booked is calculated in Opportunity field BuyResellMarginBooked__c &amp; only (* )multiply by split is done hear.</description>
    <formula>IF( ISNULL( Opportunity__r.BuyResellMarginBooked__c ) , 0 , Opportunity__r.BuyResellMarginBooked__c ) *   IF( ISNULL( Commision__c ) , 0 , Commision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy Resell Margin Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>