force-app/main/default/objects/Sales_Representative__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENGINEERING ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>OWNER ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>ENGINEERING TASK</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR TASK</fullName>
            </value>
            <value>
                <fullName>WARRANTY ADMIN</fullName>
            </value>
            <value>
                <fullName>INFLUENCE SPECIFICATION</fullName>
            </value>
            <value>
                <fullName>INFLUENCE PURCHASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>