force-app/main/default/objects/Sales_Representative__c/fields/Commision__c.field-meta.xml
<CustomField>
    <fullName>Commision__c</fullName>
    <label>Commision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>