force-app/main/default/objects/Sales_Representative__c/fields/Company_Booking__c.field-meta.xml
<CustomField>
    <fullName>Company_Booking__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c + Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>