force-app/main/default/objects/Sales_Representative__c/fields/COMPANY_BOOKINGS_PERC_PAID_ON__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_BOOKINGS_PERC_PAID_ON__c</fullName>
    <formula>IF(Company_Booking__c != 0, (Paid_dollar__c / Company_Booking__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% PAID ON COMPANY BOOKINGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>