force-app/main/default/objects/Sales_Representative__c/fields/DirectCommisionMarginBooked__c.field-meta.xml
<CustomField>
    <fullName>DirectCommisionMarginBooked__c</fullName>
    <description>The above formula is calculated from project Financials tab --&gt; MARGIN
And we&apos;re using this formula field in Sales Result dashboard for--&gt; Direct/Commision Margin Booked
&amp; Direct/Commision Margin Booked is calculated in Opportunity field DirectCommisionMarginBooked__c &amp; only (* )multiply by split is done hear.</description>
    <formula>IF( ISNULL( Opportunity__r.DirectCommisionMarginBooked__c ) , 0, Opportunity__r.DirectCommisionMarginBooked__c ) *  IF( ISNULL( Commision__c ) , 0 , Commision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct/Commision Margin Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>