force-app/main/default/objects/Sales_Representative__c/fields/Invoiced_dollar__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_dollar__c</fullName>
    <formula>Opportunity__r.C_R_BillingLine_Total__c + Opportunity__r.B_R_BillingLine_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>