force-app/main/default/objects/Sales_Representative__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Named</fullName>
            </value>
            <value>
                <fullName>Basis</fullName>
            </value>
            <value>
                <fullName>Value Add</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>ENGINEERING ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>OWNER ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>ENGINEERING TASK</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR TASK</fullName>
            </value>
            <value>
                <fullName>WARRANTY ADMIN.</fullName>
            </value>
            <value>
                <fullName>INFLUENCE SPECIFICATION</fullName>
            </value>
            <value>
                <fullName>INFLUENCE PURCHASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>