force-app/main/default/objects/Sales_Representative__c/fields/Margin_Backlog_Total_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Backlog_Total_Percent__c</fullName>
    <formula>( Opportunity__r.Total_Margin_Backlog__c  *  Commision__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Backlog Total_Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>