force-app/main/default/objects/Sales_Representative__c/fields/MarginBooked__c.field-meta.xml
<CustomField>
    <fullName>MarginBooked__c</fullName>
    <description>The above formula is calculated from project Financials tab --&gt; Margin 
And we&apos;re using this formula field in Sales Result dashboard  for--&gt; Total Margin (Booked)
&amp; Total Margin is calculated in Opportunity field MarginBooked__c  &amp; only (* )multiply by split is done hear.</description>
    <formula>Opportunity__r.MarginBooked__c   *  Commision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>