force-app/main/default/objects/Sales_Representative__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <formula>TEXT(Sales_Rep__r.Office_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Location</label>
    <type>Text</type>
</CustomField>