force-app/main/default/objects/Sales_Representative__c/fields/Paid_dollar__c.field-meta.xml
<CustomField>
    <fullName>Paid_dollar__c</fullName>
    <formula>Opportunity__r.Paid_Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAID $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>