force-app/main/default/objects/Sales_Representative__c/fields/Sales_Backlog_Total_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Backlog_Total_Percent__c</fullName>
    <formula>(Opportunity__r.Total_Sales_Backlog__c *  Commision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Backlog Total_Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>