force-app/main/default/objects/Sales_Representative__c/fields/Sales_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Id__c</fullName>
    <formula>Sales_Rep__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Id</label>
    <type>Text</type>
</CustomField>