force-app/main/default/objects/Sales_Representative__c/fields/Total_Booking__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Direct_Sell_Price__c + Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>