force-app/main/default/objects/Sales_Representative__c/fields/Total_Cogs__c.field-meta.xml
<CustomField>
    <fullName>Total_Cogs__c</fullName>
    <formula>if((Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c)&gt;=(Opportunity__r.Project__r.Total_Labour_JE_Credit__c + Opportunity__r.Project__r.Total_Labour_JE_Debit__c + Opportunity__r.Project__r.Total_Other_JE_Credit__c + Opportunity__r.Project__r.Total_Other_JE_Debit__c +Opportunity__r.Inventory_Cost_total__c+Opportunity__r.PO_Total__c),(Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c),(Opportunity__r.Project__r.Total_Labour_JE_Credit__c + Opportunity__r.Project__r.Total_Labour_JE_Debit__c + Opportunity__r.Project__r.Total_Other_JE_Credit__c + Opportunity__r.Project__r.Total_Other_JE_Debit__c +Opportunity__r.Inventory_Cost_total__c+Opportunity__r.PO_Total__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cogs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>