force-app/main/default/objects/Sales_Representative__c/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c + Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c -  Total_Cogs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>