force-app/main/default/objects/Sales_Representative__c/fields/TotalDirectSales__c.field-meta.xml
<CustomField>
    <fullName>TotalDirectSales__c</fullName>
    <description>The above formula is calculated from project Financials tab --&gt; REVENUE
And we&apos;re using this formula field in Sales Result dashboard for--&gt; Total Direct Sales
&amp; Total Direct Sales is calculated in Opportunity field TotalDirectSales__c &amp; only (* )multiply by split is done hear.</description>
    <formula>IF( ISNULL( Opportunity__r.TotalDirectSales__c ) , 0 , Opportunity__r.TotalDirectSales__c ) *  IF( ISNULL( Commision__c ) , 0 , Commision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>