force-app/main/default/objects/Sales_Representative__c/fields/TotalSalesBooked__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesBooked__c</fullName>
    <description>The above formula is calculated from project Financials tab --&gt; REVENUE
And we&apos;re using this formula field in Sales Result dashboard for--&gt; TotalSalesBooked
&amp; TotalSalesBooked is calculated in Opportunity field TotalSalesBooked__c &amp; only (* )multiply by split is done hear.</description>
    <formula>IF( ISNULL( Opportunity__r.TotalSalesBooked__c ) , 0 , Opportunity__r.TotalSalesBooked__c ) *  IF( ISNULL( Commision__c ) , 0 , Commision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>